--- a/style.css
+++ b/style.css
@@ -75,30 +75,6 @@ a {
     height: 100%;
 }
 
-.prev, .next {
-    cursor: pointer;
-    position: absolute;
-    top: 35%;
-    width: auto;
-    padding: 16px;
-    margin-top: -22px;
-    color: black;
-    font-weight: bold;
-    font-size: 30px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-}
-  
-.next {
-    right: 5%;
-    border-radius: 3px 0 0 3px;
-}
-  
-.prev:hover,.next:hover {
-    background-color: gray;
-}
-  
 .fade {
     -webkit-animation-name: fade;
     -webkit-animation-duration: 2s;
@@ -263,6 +239,29 @@ label{
     background-color: #e7a868;
 }
 
+.prevNew,.nextNew{
+    cursor: pointer;
+    position: absolute;
+    top: 35%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: black;
+    font-weight: bold;
+    font-size: 30px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+.nextNew{
+    right: 1%;
+}
+
+.prevNew{
+    left: 1%;
+}
+
 /*Media Queries*/
 @media(max-width:600px){
     #SGBI{
@@ -297,37 +296,7 @@ label{
     }
     .text{
         font-size: 15px;
-    }
-    
-    .prev, .next {
-        cursor: pointer;
-        position: relative;
-        top: -42%;
-        width: auto;
-        padding: 16px;
-        margin-top: -68px;
-        color: black;
-        font-weight: bold;
-        font-size: 30px;
-        transition: 0.6s ease;
-        border-radius: 0 3px 3px 0;
-        user-select: none;
-    }
-    
-    .next {
-        right: -90%;
-        border-radius: 3px 0 0 3px;
-    }
-    .prev {
-        left: -5%;
-        border-radius: 3px 0 0 3px;
-    }
-
-    /* .prev, .next {
-        padding: 0px;
-        top: 20%;
-    } */
-    
+    } 
 
     .topnav a:not(:first-child) {display: none;}
     .topnav a.icon {
@@ -368,5 +337,28 @@ label{
         width: 90%;
         margin: auto;
         margin-bottom: 4%;
+    }
+    
+    .prevNew,.nextNew{
+        cursor: pointer;
+        position: relative;
+        top: -61%;
+        width: auto;
+        padding: 16px;
+        margin-top: 0px;
+        color: black;
+        font-weight: bold;
+        font-size: 30px;
+        transition: 0.6s ease;
+        border-radius: 0 3px 3px 0;
+        user-select: none;
+    }
+
+    .nextNew{
+        right: -73%;
+    }
+
+    .prevNew{
+        left: 0%;
     }
 }
