--- a/style.css
+++ b/style.css
@@ -263,7 +263,7 @@ label{
 }
 
 /*Media Queries*/
-@media(max-width:600px){
+@media only screen and (max-width:600px){
     #SGBI{
         width: 260px;
         height: 260px;
