--- a/style.css
+++ b/style.css
@@ -339,7 +339,7 @@ label{
         margin-bottom: 4%;
     }
     
-    .prevNew,.nextNew{
+    /*.prevNew,.nextNew{
         cursor: pointer;
         position: relative;
         top: -86%;
@@ -360,9 +360,9 @@ label{
 
     .prevNew{
         left: 0%;
-    }
-    /*
+    }*/
+    
    .prevNew,.nextNew{
         display:none;
-    }*/
+    }
 }
