--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ a {
     width: 90%;
     height: 400px;
     margin: 0 auto;
-    display: flex;
+    display: none;
     flex-direction: row;
     background-color:rgba(255, 255, 255, 0.9);
 }
