--- a/style.css
+++ b/style.css
@@ -45,6 +45,25 @@ a {
     padding-top: 30px;
 }
 
+.slideshowContainerCert{
+    background-size: cover;
+    width: 100%;
+    padding-top: 30px;
+}
+
+.mySlidesCert{
+    width: 90%;
+    height: 600px;
+    margin: 0 auto;
+    display: none;
+    flex-direction: row;
+    background-color:rgba(255, 255, 255, 0.9);
+}
+
+.certificateImgs{
+    width: 100%;    
+}
+
 .mySlides{
     width: 90%;
     height: 400px;
@@ -149,7 +168,7 @@ label{
     margin-top: -0.5%;
 }
 
-#AboutMe,#WorkExperience,#Projects,#Blogs,#Hobbies,#SkillSet,#ContactDiv{
+#AboutMe,#WorkExperience,#Projects,#Blogs,#Hobbies,#SkillSet,#ContactDiv,#Certifications{
     margin-left: 10%;
     margin-right: 10%;
     margin-top: 2%;
@@ -200,10 +219,6 @@ label{
     display: flex;
     flex-direction: row;
 }
-
-/* li{
-    list-style-type: none;
-} */
 
 .links{
     font-size: 20px;
@@ -263,6 +278,30 @@ label{
     left: 1%;
 }
 
+
+.prevNewCert,.nextNewCert{
+    cursor: pointer;
+    position: absolute;
+    top: 410%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: black;
+    font-weight: bold;
+    font-size: 30px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+.nextNewCert{
+    right: 10%;
+}
+
+.prevNewCert{
+    left: 10%;
+}
+
 .modalContainer{
     width: 100%;
     height: 100%;
@@ -317,7 +356,15 @@ label{
         height: 455px;
         padding-top: 15px;
     }
+    .slideshowContainerCert{
+        height: 260px;
+        padding-top: 15px;
+    }
     .mySlides{
+        height: 430px;
+        flex-direction: column;
+    }
+    .mySlidesCert{
         height: 430px;
         flex-direction: column;
     }
@@ -378,32 +425,14 @@ label{
         margin-bottom: 4%;
     }
     
-    /*.prevNew,.nextNew{
-        cursor: pointer;
-        position: relative;
-        top: -86%;
-        width: auto;
-        padding: 16px;
-        margin-top: 0px;
-        color: black;
-        font-weight: bold;
-        font-size: 30px;
-        transition: 0.6s ease;
-        border-radius: 0 3px 3px 0;
-        user-select: none;
-    }
-
-    .nextNew{
-        right: -73%;
-    }
-
-    .prevNew{
-        left: 0%;
-    }*/
-    
    .prevNew,.nextNew{
         display:none;
     }
+
+    .prevNewCert,.nextNewCert{
+        display:none;
+    }
+
     .w3-modal-content{
         width: 400px;
     }
